fixed share button icons & section header overflow

--- a/assets/_sass/_site.scss
+++ b/assets/_sass/_site.scss
@@ -795,6 +795,9 @@ canvas {
     .section-line {
       display: none;
     }
+    .tags {
+      display: none;
+    }
     .section-title {
       font-size: 40px;
     }
